@startuml
!theme plain

entity "users" as User {
  *id: uuid
  --
  username: varchar
  email: varchar
  password_hash: varchar
}

entity "roles" as Role {
  *id: uuid
  --
  code: varchar
}

entity "user_roles" as UserRole {
  *id: uuid
  --
  user_id: uuid
  role_code: varchar
  org_id: uuid?
}

entity "organizations" as Org {
  *id: uuid
  --
  name: varchar
  slug: varchar
  type: varchar
}

entity "org_members" as OrgMember {
  *id: uuid
  --
  org_id: uuid
  user_id: uuid
  role: varchar
}

entity "activities" as Activity {
  *id: uuid
  --
  org_id: uuid
  title: varchar
  status: varchar
  cover_key: varchar
}

entity "activity_histories" as ActHist {
  *id: uuid
  --
  activity_id: uuid
  org_id: uuid
  user_id: uuid
  action: varchar
}

entity "lpjs" as LPJ {
  *id: uuid
  --
  activity_id: uuid
  org_id: uuid
  status: varchar
  report_key: varchar
}

entity "lpj_histories" as LPJHist {
  *id: uuid
  --
  activity_id: uuid
  org_id: uuid
  user_id: uuid
  action: varchar
}

entity "surats" as Surat {
  *id: uuid
  --
  variant: varchar
  subject: varchar
  file_key: varchar
  created_by: uuid
}

entity "surat_templates" as SuratTpl {
  *id: uuid
  --
  name: varchar
  variant: varchar
  payload_json: json
}

entity "refresh_tokens" as RT {
  *id: uuid
  --
  user_id: uuid
  token: varchar
}

entity "notifications" as Notif {
  *id: uuid
  --
  user_id: uuid
  title: varchar
  read_at: timestamp?
}

entity "audit_logs" as Audit {
  *id: uuid
  --
  user_id: uuid
  action: varchar
}

User ||--o{ UserRole
Role ||--o{ UserRole
Org ||--o{ UserRole
Org ||--o{ OrgMember
User ||--o{ OrgMember
Org ||--o{ Activity
Activity ||--|| LPJ
Activity ||--o{ ActHist
LPJ ||--o{ LPJHist
User ||--o{ Surat
User ||--o{ SuratTpl
User ||--o{ RT
User ||--o{ Notif
User ||--o{ Audit
@enduml
